app/styles/typography.css
/* TYPOGRAPHY STYLES */

h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: "Inter", Arial, Helvetica, sans-serif;
  font-weight: bold;
  font-style: normal;
  line-height: 110%;
  margin: 1rem 0;
  color: var(--text-primary);
}

h1 {
  font-size: 6rem;
  letter-spacing: -0.3rem;
}
h2 {
  font-size: 5.5rem;
  letter-spacing: -0.3rem;
}
h3 {
  font-size: 5rem;
  letter-spacing: -0.3rem;
}
h4 {
  font-size: 4.5rem;
  letter-spacing: -0.2rem;
}
h5 {
  font-size: 4rem;
  letter-spacing: -0.2rem;
}
h6 {
  font-size: 3.5rem;
  letter-spacing: -0.2rem;
}

.semiBold {
  font-weight: 500;
}
.regular {
  font-weight: 400;
}
.light {
  font-weight: 300;
}
.lighter {
  font-weight: 200;
}
.lightest {
  font-weight: 100;
}

body,
p {
  font-family: "Inter", Arial, Helvetica, sans-serif;
  font-weight: normal;
  font-style: normal;
  font-size: 1.6rem;
  color: var(--text-primary);
}
p {
  line-height: 150%;
  margin: 1rem 0;
  padding-bottom: 1rem;
}

.center-text {
  text-align: center;
}

